<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/gocooktest"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_below="@+id/image"
        android:gravity="center"
        />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:layout_below="@+id/text"
        android:inputType="textWebEmailAddress"
        />
    <EditText
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:id="@+id/nama"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Your_name"
        android:layout_below="@+id/text"
        android:inputType="none"
        />
    <EditText
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:id="@+id/emailuser"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:layout_below="@+id/nama"
        android:inputType="none"
        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@+id/email"
        />
    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="Dont Have Account ? Register"
android:gravity="center_horizontal"
        android:textColor="@color/blue"
        />

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarSize="10dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />
    <Button
        android:id="@+id/btn_login_email"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_with_email"
        android:background="@color/blue"
        />
    <Button
        android:visibility="invisible"
        android:id="@+id/btn_edit"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_marginBottom="30dp"
        android:text="@string/edit"

        android:background="@color/blue"
        />
    <Button
        android:visibility="invisible"
        android:id="@+id/btn_submitedit"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_marginBottom="30dp"
        android:text="@string/submit"
        android:background="@color/blue"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_marginBottom="100dp"
        android:text="@string/login_with_google"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_google_logo"
        />

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_logout"
        android:layout_centerHorizontal="true"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/logout"
        android:background="@color/white"
        />
</com.google.android.material.circularreveal.CircularRevealRelativeLayout>